--- a/package.json
+++ b/package.json
@@ -48,8 +48,11 @@
     "ng2-charts": "^8.0.0",
     "ngx-translate": "^0.0.1-security",
     "ngx-translate-messageformat-compiler": "^7.2.0",
+    "pouchdb": "^7.3.1",
     "pouchdb-adapter-http": "^9.0.0",
     "pouchdb-adapter-idb": "^9.0.0",
+    "pouchdb-find": "^7.3.1",
+    "pouchdb-replication": "^7.3.1",
     "rxjs": "~7.8.0",
     "three": "^0.179.1",
     "tslib": "^2.3.0",
