--- a/package.json
+++ b/package.json
@@ -45,14 +45,16 @@
     "@types/pouchdb": "^6.4.2",
     "@types/three": "^0.179.0",
     "chart.js": "^4.5.0",
+    "events": "^3.3.0",
     "ng2-charts": "^8.0.0",
     "ngx-translate": "^0.0.1-security",
     "ngx-translate-messageformat-compiler": "^7.2.0",
-    "pouchdb": "^7.3.1",
+    "pouchdb": "^9.0.0",
     "pouchdb-adapter-http": "^9.0.0",
     "pouchdb-adapter-idb": "^9.0.0",
-    "pouchdb-find": "^7.3.1",
-    "pouchdb-replication": "^7.3.1",
+    "pouchdb-browser": "^7.3.1",
+    "pouchdb-find": "^9.0.0",
+    "pouchdb-replication": "^9.0.0",
     "rxjs": "~7.8.0",
     "three": "^0.179.1",
     "tslib": "^2.3.0",
@@ -62,6 +64,7 @@
     "@angular/build": "^20.2.1",
     "@angular/cli": "^20.2.1",
     "@angular/compiler-cli": "^20.2.0",
+    "@types/events": "^3.0.3",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
