Clean up test images and improve .gitignore
- Add PNG files exclusion to .gitignore (except favicon and assets)
- Remove test screenshot files from repository
- Keep only essential image assets

--- a/.gitignore
+++ b/.gitignore
@@ -124,3 +124,9 @@ local.*
 # Backup files
 *.bak
 *.backup
+
+# Test screenshots and debug images
+*.png
+!favicon.ico
+!assets/**/*.png
+!assets/**/*.svg
