MCP is ready. CouchDB is ready.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,23 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "system:start": "npm run system:init && npm run system:db && npm run system:mcp && npm run system:angular",
+    "system:stop": "cd infrastructure/docker && docker compose down && pkill -f 'ng serve' && pkill -f 'node.*couchdb-index'",
+    "system:status": "echo '📊 Статус системы:' && cd infrastructure/docker && docker compose ps && echo '' && echo '🔍 Проверка сервисов:' && curl -s http://localhost:5984 > /dev/null && echo '✅ CouchDB: доступен' || echo '❌ CouchDB: недоступен' && curl -s http://localhost:8080 > /dev/null && echo '✅ Fauxton: доступен' || echo '❌ Fauxton: недоступен' && curl -s http://localhost:4200 > /dev/null && echo '✅ Angular: доступен' || echo '❌ Angular: недоступен'",
+    "system:init": "echo '🚀 Инициализация системы...' && cd infrastructure/scripts && npm install && npm run init && cd ../..",
+    "system:db": "echo '🐳 Запуск CouchDB и Fauxton...' && cd infrastructure/docker && docker compose up -d && echo '⏳ Ожидание запуска сервисов...' && sleep 10 && echo '✅ База данных запущена'",
+    "system:mcp": "echo '🔧 Запуск MCP сервера...' && cd infrastructure/mcp-server && npm install && npm run build && npm run start:couchdb &",
+    "system:angular": "echo '🌐 Запуск Angular приложения...' && npm run start &",
+    "system:logs": "echo '📋 Логи системы:' && cd infrastructure/docker && docker compose logs --tail=50",
+    "system:logs:couchdb": "cd infrastructure/docker && docker compose logs -f couchdb",
+    "system:logs:fauxton": "cd infrastructure/docker && docker compose logs -f fauxton",
+    "system:restart": "npm run system:stop && sleep 3 && npm run system:start",
+    "system:clean": "echo '🧹 Очистка системы...' && cd infrastructure/docker && docker compose down -v && docker system prune -f && echo '✅ Система очищена'",
+    "system:test": "echo '🧪 Тестирование системы...' && cd infrastructure && node test-mcp-direct.js",
+    "system:info": "echo '📊 Информация о системе:' && echo 'CouchDB: http://localhost:5984' && echo 'Fauxton: http://localhost:8080' && echo 'Angular: http://localhost:4200' && echo 'Логин: admin / admin123'",
+    "dev:start": "npm run system:db && npm run system:mcp && npm run start",
+    "dev:stop": "npm run system:stop"
   },
   "prettier": {
     "printWidth": 100,
