--- a/infrastructure/mcp-server/pouchdb-mcp-server/package.json
+++ b/infrastructure/mcp-server/pouchdb-mcp-server/package.json
@@ -7,15 +7,23 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "tsx src/index.ts"
+    "start:couchdb": "node dist/couchdb-index.js",
+    "dev": "tsx src/index.ts",
+    "dev:couchdb": "tsx src/couchdb-index.ts",
+    "http-server": "node dist/http-server.js"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^0.4.0",
     "pouchdb": "^8.0.1",
-    "pouchdb-adapter-memory": "^8.0.1"
+    "pouchdb-adapter-memory": "^8.0.1",
+    "pouchdb-adapter-http": "^8.0.1",
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
+    "@types/express": "^4.17.17",
+    "@types/cors": "^2.8.13",
     "tsx": "^4.0.0",
     "typescript": "^5.0.0"
   },
