--- a/package.json
+++ b/package.json
@@ -71,6 +71,9 @@
     "pouchdb-browser": "^7.3.1",
     "pouchdb-find": "^9.0.0",
     "pouchdb-replication": "^9.0.0",
+    "primeflex": "^4.0.0",
+    "primeicons": "^7.0.0",
+    "primeng": "^20.0.1",
     "rxjs": "~7.8.0",
     "three": "^0.179.1",
     "tslib": "^2.3.0",
