--- a/.cursor-mcp-config.json
+++ b/.cursor-mcp-config.json
@@ -11,6 +11,12 @@
       "args": ["./dist/easyredmine-index.js"],
       "env": {},
       "cwd": "infrastructure/mcp-server/easyredmine-mcp-server"
+    },
+    "primeng": {
+      "command": "node",
+      "args": ["./dist/index.js"],
+      "env": {},
+      "cwd": "infrastructure/mcp-server/primeng-mcp-server"
     }
   }
 }
